@@ -828,12 +828,11 @@ CSSValueImpl *CSSComputedStyleDeclarationImpl::getPropertyCSSValue(int propertyI
         case CSS_PROP__APPLE_DASHBOARD_REGION: {
             QValueList<StyleDashboardRegion> regions = style->dashboardRegions();
             uint i, count = regions.count();
-            DashboardRegionImpl *firstRegion = new DashboardRegionImpl(), *region;
-            region = firstRegion;
-            
             if (count == 1 && regions[0].type == StyleDashboardRegion::None)
                 return new CSSPrimitiveValueImpl (CSS_VAL_NONE);
                 
+            DashboardRegionImpl *firstRegion = new DashboardRegionImpl(), *region;
+            region = firstRegion;
             for (i = 0; i < count; i++) {
                 StyleDashboardRegion styleRegion = regions[i];
                 region->m_label = styleRegion.label;
